2010-05-14  Andrei Popescu  <andreip@google.com>

        Reviewed by Jeremy Orlow.

        IDBRequest is not a proper ActiveDomObject
        https://bugs.webkit.org/show_bug.cgi?id=39001

        Add IDBRequest interface to the IsActiveDomType
        routine of the CodeGeneratorV8.pm.

        Rename IDBRequest::m_stopped to m_suspended and reset
        the flag when resume() is called.

        No new tests, Indexed Database isn't yet testable.

        * bindings/scripts/CodeGeneratorV8.pm:
        * storage/IDBRequest.cpp:
        (WebCore::IDBRequest::suspend):
        (WebCore::IDBRequest::resume):
        (WebCore::IDBRequest::timerFired):
        (WebCore::IDBRequest::onEventCommon):
        * storage/IDBRequest.h:

2010-05-17  Xan Lopez  <xlopez@igalia.com>

        Do not include the indexed database headers if the feature is not
        enabled. Should fix the build in GTK+.

        * bindings/js/JSEventCustom.cpp:

2010-05-17  Xan Lopez  <xlopez@igalia.com>

        Try to fix GTK+ build.

        * GNUmakefile.am:

2010-05-14  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        Finish up IndexedDB events
        https://bugs.webkit.org/show_bug.cgi?id=39117

        Implement the indexed database event interfaces as proposed by Mozilla.
        Refactor the run time type detection code that was in IDBRequest into its own
        class named IDBAny.  Use this new class within the new event classes and
        IDBResults.

        Test: storage/indexeddb/basics.html

        * DerivedSources.cpp:
        * DerivedSources.make:
        * GNUmakefile.am:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.pri:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSEventCustom.cpp:
        (WebCore::toJS):
        * bindings/js/JSEventTarget.cpp:
        (WebCore::toJS):
        * bindings/js/JSIDBAnyCustom.cpp: Added.